--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 	<title>hello coursera</title>
 </head>
 <body>
-<h1> hello. That Is a greate course!</h1>
+<form>
+  <div>
+    <label for="nickname">Ваше имя:</label>
+  </div>
+  <div>
+    <input type="text" id="nickname" name="nickname">
+  </div>
+  <div>
+    <label for="user-email">Ваш e-mail:</label>
+  </div>
+  <div>
+    <input type="email" id="user-email" name="user-email">
+  </div>
+  <div>
+    <label for="content">Содержание:</label>
+  </div>
+  <div>
+    <textarea rows="10" cols="50" id="content" name="content"></textarea>
+  </div>
+  <div>
+    <input type="submit" value="Добавить">
+  </div>
+</form>
 </body>
 </html>
